Added footer scale indicator and region info.

--- a/public/games/foxhole/styles.css
+++ b/public/games/foxhole/styles.css
@@ -110,6 +110,12 @@ body {
     padding: 10px 12px;
 }
 
+/*
+.show-footer-info .statistics-panel .board-panel-body {
+    max-height: 869px;
+}
+*/
+
 .statistics-panel .board-panel-body .resource-row {
     background: #0b0b0b;
     margin: 0;
