--- a/public/styles.css
+++ b/public/styles.css
@@ -1833,6 +1833,7 @@ label.settings-option-wrapper input, .settings-option-wrapper label input {
 
 .settings-option-wrapper input:not(.slider) {
     width: 100px;
+    height: 30px;
 }
 
 label.settings-option-wrapper input[type="checkbox"], .settings-option-wrapper input[type="checkbox"] {
